# LanTransfer

./: README.md  pubspec.yaml
android/app/: build.gradle.kts
doc/: Rust与Flutter接口及界面清单.md  使用说明.md  需求概述.md
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: app_session.dart
lib/files/: export_text.dart  export_text_io.dart  export_text_stub.dart
lib/models/: discovered_peer.dart  user_tree.dart
lib/services/: lan_broadcast.dart  lan_broadcast_io.dart  lan_broadcast_stub.dart  network_diagnostics.dart  settings_store.dart  windows_firewall_setup.dart  windows_firewall_setup_io.dart  windows_firewall_setup_stub.dart
lib/ui/: about_page.dart  home_page.dart  remote_desktop_page.dart  settings_page.dart  troubleshooting_page.dart
lib/utils/: cartoon_file_icon.dart  desktop_chrome.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: app_state.rs  file_transfer.rs  frb_generated.rs  lib.rs  remote_desktop.rs
rust/src/api/: config.rs  mod.rs  peer.rs  remote_client.rs  remote_host.rs  transfer.rs  types.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_flutterdemo2.podspec
scripts/: lan_udp_probe.py
test/: widget_test.dart
tool/: generate_app_icon.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+23 files in other folders)
