[package]
name = "rust_lib_flutterdemo2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
enigo = "0.6"
flutter_rust_bridge = "=2.11.1"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
# 截屏：跨平台；Windows 可另开 feature `wgc` 走 Graphics Capture（需在 target 上启用）。未使用 scrap（已弃用）、未使用 quinn（局域网 TCP + TCP_NODELAY 即可）。
xcap = { version = "0.9", features = ["image"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
